<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="200dp"
            android:layout_height="233dp"
            app:srcCompat="@drawable/money"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/title_lbl"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/imagem_contendo_algumas_notas_e_moedas" />

        <TextView
            android:id="@+id/title_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/converta_o_valor_de_d_lar_para_real"
            app:layout_constraintTop_toBottomOf="@id/logo_img"
            app:layout_constraintStart_toStartOf="@id/logo_img"
            app:layout_constraintEnd_toEndOf="@id/logo_img"
            app:layout_constraintBottom_toTopOf="@+id/dollar_today_edt"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="32dp"
        />

        <EditText
            android:id="@+id/dollar_today_edt"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/digite_o_valor_do_d_lar_hoje"
            app:layout_constraintEnd_toEndOf="@+id/title_lbl"
            app:layout_constraintStart_toStartOf="@+id/title_lbl"
            app:layout_constraintTop_toBottomOf="@+id/title_lbl"
            app:layout_constraintBottom_toTopOf="@+id/dollar_value_edt"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/dollar_value_edt"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/digite_o_valor_em_real"
            app:layout_constraintEnd_toEndOf="@+id/dollar_today_edt"
            app:layout_constraintStart_toStartOf="@+id/dollar_today_edt"
            app:layout_constraintTop_toBottomOf="@+id/dollar_today_edt"
            app:layout_constraintBottom_toTopOf="@id/result_lbl"/>

        <TextView
            android:id="@+id/result_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintTop_toBottomOf="@id/dollar_value_edt"
            app:layout_constraintStart_toStartOf="@id/dollar_value_edt"
            app:layout_constraintEnd_toEndOf="@id/dollar_value_edt"
            app:layout_constraintBottom_toTopOf="@id/confirm_btn"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="32dp"
            />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/result_lbl"
            app:layout_constraintStart_toStartOf="@id/result_lbl"
            app:layout_constraintEnd_toEndOf="@+id/result_lbl"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="48dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/converter"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>